--- a/index.html
+++ b/index.html
@@ -35,6 +35,21 @@
     <div class="obraz">
         <img src="./assets/heaven.jpg" alt="zwierz">
     </div>
-
+    <div class="test">
+        Majki to największy cwel.
+    </div>
+    <div id='position-test'>
+        <div id='position-absolute'>
+            dupa
+        </div>
+        <div id='position-absolute'>
+            dupa
+        </div><div id='position-absolute'>
+            dupa
+        </div><div id='position-absolute' style="flex: 3">
+            dupa
+        </div>
+    </div>
+<script src="./app.js" defer></script>
 </body>
 </html>
