takie tam testy

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Ryneczek</title>
-    <link rel="stylesheet" href="styles.css" type="text/css">
+    <link rel="stylesheet" href="./styles.css" type="text/css">
 </head>
 <body>
     <div class="dupa">Piękna Beta</div>
@@ -35,8 +35,15 @@
     <div class="obraz">
         <img src="./assets/heaven.jpg" alt="zwierz">
     </div>
-    <div class="test">
-        Majki to największy cwel.
+    <div class="nowe">
+        <p>
+            Zobacz jak jednym prostym sposobem zostałem geniuszem
+        </p>
+        <img class="cosik" src="./assets/dupa.jpg" alt="reklama">
+        <a href="./direct.html" target="_blank"><button>Zobacz jak</button></a>
+    </div>
+    <!-- <div class="test">
+        Heheszki to największy cwel.
     </div>
     <div id='position-test'>
         <div id='position-absolute'>
@@ -49,7 +56,7 @@
         </div><div id='position-absolute' style="flex: 3">
             dupa
         </div>
-    </div>
+    </div> -->
 <script src="./app.js" defer></script>
 </body>
 </html>
